test/attr/attr_abi_objc.code
// RUN: %target-typecheck-verify-language -parse-as-library

// REQUIRES: objc_interop

import Foundation

// @NSCopying -- banned in @abi
class NSCopyingAttr: NSObject {
  @abi(@NSCopying var v1: NSArray?) // expected-error {{unused 'NSCopying' attribute in '@abi'}} {{8-18=}}
  @NSCopying var v1: NSArray? = nil

  @abi(var v2: NSArray?)
  @NSCopying var v2: NSArray? = nil
}

// Availability
// These tests will only work on a versioned platform.
@available(macOS 99, iOS 99, tvOS 99, watchOS 99, visionOS 99, *)
struct FutureType {}

@abi(fn available5(_: FutureType)) // expected-error {{'FutureType' is only available in }}
fn available5(_: FutureType) {} // expected-error {{'FutureType' is only available in }}
// expected-note@-1 2{{add '@available' attribute to enclosing global function}} (fix-it not tested because it varies by target)

@abi(fn available6(_: FutureType))
@available(macOS 99, iOS 99, tvOS 99, watchOS 99, visionOS 99, *) fn available6(_: FutureType) {}

// @objc -- banned in @abi
class ObjCAttr: NSObject {
  @abi(@objc fn fn1()) // expected-error {{unused 'objc' attribute in '@abi'}} {{8-13=}}
  @objc fn fn1() {}

  @abi(@objc fn fn2()) // expected-error {{unused 'objc' attribute in '@abi'}} {{8-13=}}
  fn fn2() {}

  @abi(fn fn3())
  @objc fn fn3() {}
}

// @IBAction -- banned in @abi
class IBActionAttr: NSObject {
  @abi(@IBAction fn fn1(_: Any)) // expected-error {{unused 'IBAction' attribute in '@abi'}} {{8-17=}}
  @IBAction fn fn1(_: Any) {}

  @abi(@IBAction fn fn2(_: Any)) // expected-error {{unused 'IBAction' attribute in '@abi'}} {{8-17=}}
  fn fn2(_: Any) {}

  @abi(fn fn3(_: Any))
  @IBAction fn fn3(_: Any) {}
}

// @IBInspectable -- banned in @abi
class IBInspectableAttr: NSObject {
  @abi(@IBInspectable var v1: Double) // expected-error {{unused 'IBInspectable' attribute in '@abi'}} {{8-22=}}
  @IBInspectable var v1: Double = 0.0

  @abi(@IBInspectable var v2: Double) // expected-error {{unused 'IBInspectable' attribute in '@abi'}} {{8-22=}}
  var v2: Double = 0.0

  @abi(var v3: Double)
  @IBInspectable var v3: Double = 0.0
}

// @GKInspectable -- banned in @abi
class GKInspectableAttr: NSObject {
  @abi(@GKInspectable var v1: Double) // expected-error {{unused 'GKInspectable' attribute in '@abi'}} {{8-22=}}
  @GKInspectable var v1: Double = 0.0

  @abi(@GKInspectable var v2: Double) // expected-error {{unused 'GKInspectable' attribute in '@abi'}} {{8-22=}}
  var v2: Double = 0.0

  @abi(var v3: Double)
  @GKInspectable var v3: Double = 0.0
}

// @IBOutlet -- banned in @abi
class IBOutletAttr: NSObject {
  @abi(@IBOutlet var v1: NSObject!) // expected-error {{unused 'IBOutlet' attribute in '@abi'}} {{8-17=}}
  @IBOutlet var v1: NSObject!

  @abi(@IBOutlet var v2: NSObject!) // expected-error {{unused 'IBOutlet' attribute in '@abi'}} {{8-17=}}
  var v2: NSObject!

  @abi(var v3: NSObject!)
  @IBOutlet var v3: NSObject!
}

// @IBSegueAction -- banned in @abi
class IBSegueActionAttr: NSObject {
  @abi(@IBSegueAction fn fn1(_: Any) -> Any) // expected-error {{unused 'IBSegueAction' attribute in '@abi'}} {{8-22=}}
  @IBSegueAction fn fn1(_: Any) -> Any {}

  @abi(@IBSegueAction fn fn2(_: Any) -> Any) // expected-error {{unused 'IBSegueAction' attribute in '@abi'}} {{8-22=}}
  fn fn2(_: Any) -> Any {}

  @abi(fn fn3(_: Any) -> Any)
  @IBSegueAction fn fn3(_: Any) -> Any {}
}

// @NSManaged -- banned in @abi
class NSManagedAttr: NSObject {
  @abi(@NSManaged var v1: NSObject!) // expected-error {{unused 'NSManaged' attribute in '@abi'}} {{8-18=}}
  @NSManaged var v1: NSObject!

  @abi(@NSManaged var v2: NSObject!) // expected-error {{unused 'NSManaged' attribute in '@abi'}} {{8-18=}}
  var v2: NSObject!

  @abi(var v3: NSObject!)
  @NSManaged var v3: NSObject!
}

// @nonobjc -- banned in @abi
@objcMembers
class NonObjCAttr: NSObject {
  @abi(@nonobjc var v1: NSObject!) // expected-error {{unused 'nonobjc' attribute in '@abi'}} {{8-16=}}
  @nonobjc var v1: NSObject!

  @abi(@nonobjc var v2: NSObject!) // expected-error {{unused 'nonobjc' attribute in '@abi'}} {{8-16=}}
  var v2: NSObject!

  @abi(var v3: NSObject!)
  @nonobjc var v3: NSObject!
}

// optional -- banned in @abi
@objc protocol OptionalModifier {
  @abi(
    @objc // expected-error {{unused 'objc' attribute in '@abi'}} {{5-11=}}
    optional // expected-error {{unused 'optional' modifier in '@abi'}} {{5-14=}}
    fn fn1()
  )
  @objc optional fn fn1()

  @abi(
    @objc // expected-error {{unused 'objc' attribute in '@abi'}} {{5-11=}}
    optional // expected-error {{unused 'optional' modifier in '@abi'}} {{5-14=}}
    fn fn2()
  )
  @objc fn fn2()

  @abi(fn fn3())
  @objc optional fn fn3()
}

// dynamic -- banned in @abi
class DynamicModifier: NSObject {
  @abi(dynamic fn fn1()) // expected-error {{unused 'dynamic' modifier in '@abi'}} {{8-15=}}
  dynamic fn fn1() {}

  @abi(dynamic fn fn2()) // expected-error {{unused 'dynamic' modifier in '@abi'}} {{8-15=}}
  fn fn2() {}

  @abi(fn fn3())
  dynamic fn fn3() {}
}
